--- a/index.html
+++ b/index.html
@@ -3,14 +3,197 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Valentine Proposal</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh; /* Ensure it's exactly viewport height */
+        background: url("Will you be my valentine.png") no-repeat center center;
+        background-size: cover; /* Make the image cover the entire screen */
+        overflow: hidden; /* Prevent scrolling */
+      }
+
+      .val {
+        font-family: "Press Start 2P", sans-serif;
+        font-optical-sizing: auto;
+        font-size: 50px;
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        font-weight: 400;
+        font-style: normal;
+        color: aliceblue;
+        margin-top: 100px; /* Adjust this value as needed */
+        text-shadow: 2px 2px 5px black; /* Adds a black border around the text */
+      }
+
+      #bt {
+        margin-top: 200px;
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        gap: 100px;
+      }
+
+      button {
+        height: 70px;
+        width: 150px;
+        padding: 10px;
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        border-radius: 20px;
+        font-size: 16px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        transition: transform 0.3s ease, background-color 0.3s ease;
+      }
+
+      #yes {
+        border: 5px solid rgb(255, 182, 206);
+        background-color: antiquewhite;
+      }
+
+      #no {
+        border: 5px solid rgb(182, 188, 255);
+        background-color: rgb(128, 253, 240);
+      }
+
+      #yes:hover {
+        transform: scale(1.1);
+        height: 90px;
+        width: 200px;
+      }
+
+      img {
+        display: none;  
+        width: 200px;  
+        height: auto;
+        margin-top: 20px;
+        opacity: 0;
+        transition: opacity 1.5s ease-in-out;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      .sparkle:nth-child(1) { top: 5%; left: 95%; animation-delay: 0s; }
+      .sparkle:nth-child(2) { top: 10%; left: 10%; animation-delay: 0.5s; }
+      .sparkle:nth-child(3) { top: 25%; left: 15%; animation-delay: 1s; }
+      .sparkle:nth-child(4) { top: 30%; left: 85%; animation-delay: 1.5s; }
+      .sparkle:nth-child(5) { top: 40%; left: 20%; animation-delay: 2s; }
+      .sparkle:nth-child(6) { top: 50%; left: 50%; animation-delay: 2.5s; }
+      .sparkle:nth-child(7) { top: 60%; left: 70%; animation-delay: 3s; }
+      .sparkle:nth-child(8) { top: 70%; left: 90%; animation-delay: 3.5s; }
+      .sparkle:nth-child(9) { top: 15%; left: 30%; animation-delay: 0s; }
+      .sparkle:nth-child(10) { top: 20%; left: 60%; animation-delay: 0.5s; }
+      .sparkle:nth-child(11) { top: 35%; left: 40%; animation-delay: 1s; }
+      .sparkle:nth-child(12) { top: 45%; left: 10%; animation-delay: 1.5s; }
+      .sparkle:nth-child(13) { top: 55%; left: 80%; animation-delay: 2s; }
+      .sparkle:nth-child(14) { top: 65%; left: 5%; animation-delay: 2.5s; }
+      .sparkle:nth-child(15) { top: 75%; left: 35%; animation-delay: 3s; }
+      .sparkle:nth-child(16) { top: 85%; left: 65%; animation-delay: 3.5s; }
+      .sparkle:nth-child(17) { top: 95%; left: 25%; animation-delay: 4s; }
+      .sparkle:nth-child(18) { top: 12%; left: 78%; animation-delay: 4.5s; }
+      .sparkle:nth-child(19) { top: 18%; left: 42%; animation-delay: 5s; }
+      .sparkle:nth-child(20) { top: 27%; left: 8%; animation-delay: 5.5s; }
+      .sparkle:nth-child(21) { top: 33%; left: 93%; animation-delay: 6s; }
+      .sparkle:nth-child(22) { top: 48%; left: 72%; animation-delay: 6.5s; }
+      .sparkle:nth-child(23) { top: 53%; left: 18%; animation-delay: 7s; }
+
+      @keyframes sparkleMove {
+        0%, 100% {
+          opacity: 0.9;
+          transform: scale(0.8);
+        }
+        50% {
+          opacity: 1;
+          transform: scale(1.5);
+        }
+      }
+
+      .sparkle {
+        position: fixed;
+        width: 8px; /* Increased size */
+        height: 8px; /* Increased size */
+        background: rgb(237, 234, 255); /* Increased brightness */
+        border-radius: 50%;
+        box-shadow: 0 0 10px rgb(196, 203, 255); /* Increased glow effect */
+        animation: sparkleMove 3s infinite ease-in-out;
+      }
+    </style>
 </head>
 <body>
-    <h1>Will you be my valentine?</h1>
+    <h2 class="val">Will you be my valentine?</h2>
     <section id="bt">
-    <button id="yes">yes(kiss)</button>
-    <button id="no">no(no kiss?)</button>
-</section>
+        <button id="yes">Yes (Kiss🤭)</button>
+        <button id="no">No (No Kiss?😟)</button>
+    </section>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>  
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>  
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>  
+    <div class="sparkle"></div>
+    <div class="sparkle"></div>
+    <img id="img1" src="happy-removebg-preview.png" alt="Happy Image">
+    <img id="img2" src="no_sad-removebg-preview.png" alt="Sad Image">
+
+    <script>
+        document.getElementById("yes").addEventListener("click", function() {
+            showImage("img1");
+        });
+
+        document.getElementById("no").addEventListener("click", function() {
+            showImage("img2");
+        });
+
+        let noButton = document.getElementById("no");
+let moveCount = 0;
+
+noButton.addEventListener("mouseover", function() {
+    if (moveCount < 3) {
+        let x = Math.random() * (window.innerWidth - this.offsetWidth);
+        let y = Math.random() * (window.innerHeight - this.offsetHeight);
+        this.style.position = "absolute";
+        this.style.left = `${x}px`;
+        this.style.top = `${y}px`;
+        moveCount++;
+    } else {
+        this.textContent = "Ok, Fine!No Kiss😔🥺";
+        this.style.position = "static";  // Reset button position
+    }
+});
+
+        function showImage(imageId) {
+            let img = document.getElementById(imageId);
+            img.style.display = "block";
+            setTimeout(() => {  
+                img.style.opacity = "1";  
+            }, 50);
+        }
+    </script>
 </body>
 </html>
